[metadata]
name = mumdex
version = 0.1.0
author = "Peter Andrews @ CSHL"
author_email = "paa@drpa.us"
url = "http://mumdex.com"
description = "python interface to mumdex package"
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src

packages = find:
python_requires = >=3.6
scripts_3.10 =
    src/scripts/test_python_mumdex.sh,
    src/scripts/bridge_finder.py,
    src/scripts/bridge_info.py,
    src/scripts/candidate_finder.py,
    src/scripts/chromosome_bridges.py,
    src/scripts/load_counts.py,
    src/scripts/mumdex2txt.py,
    src/scripts/show_mums.py,
    src/scripts/test_python_mumdex.py,
    src/scripts/mapper.py,
    src/scripts/sample_bridge_finder.sh,
    src/scripts/bridge_tester.py

[options.packages.find]
where = src

